[package]
name = "rust-rtnetlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.14.0"
netlink-sys = "0.8.5"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.18.1"
futures = "0.3.29"
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
